--- a/pages/message/message.html
+++ b/pages/message/message.html
@@ -137,7 +137,7 @@
                         </div>
                         <div class="history-item">
                             <span class="date">2025年</span>
-                            <span class="description">Tonix Lab社 COO就任</span>
+                            <span class="description">Tonix Lab社 CEO就任</span>
                         </div>
                     </div>
                 </div>
