--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -99,7 +99,7 @@
                                                 </tr>
                                                 <tr>
                                                     <td>本社所在地</td>
-                                                    <td>東京都千代田区神田三崎町2-10-11-5A-6 号室</td>
+                                                    <td>千届莱県野田市山崎字南大崎728番地4</td>
                                                 </tr>
                                                 <tr>
                                                     <td>事業内容</td>
@@ -107,7 +107,7 @@
                                                 </tr>
                                                 <tr>
                                                     <td>資本金</td>
-                                                    <td>5,000,000（資本準備金含む）</td>
+                                                    <td>5,000,000</td>
                                                 </tr>
                                                 <tr>
                                                     <td>社員数</td>
