--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -99,7 +99,7 @@
                                                 </tr>
                                                 <tr>
                                                     <td>本社所在地</td>
-                                                    <td>千届県野田市山崎字南大崎728番地4</td>
+                                                    <td>千葉県野田市山崎字南大崎728番地4</td>
                                                 </tr>
                                                 <tr>
                                                     <td>事業内容</td>
